--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: "Kdam Thmor Pro", sans-serif;
   background-color: whitesmoke;
 }
 
@@ -15,4 +15,23 @@ h1 {
   margin-bottom: 15px;
   font-size: 40px;
   letter-spacing: 5px;
+}
+
+/* Loader */
+
+.loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.loader img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* below ensures that image remains centered regardless of size */
+  transform: translate(-50%, -50%);
 }
