--- a/style.css
+++ b/style.css
@@ -35,3 +35,28 @@ h1 {
   /* below ensures that image remains centered regardless of size */
   transform: translate(-50%, -50%);
 }
+
+/* Image container */
+
+.image-container {
+  margin: 10px 10%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+/* Media query: large smartphone */
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 22px;
+    margin: 25px 10px 15px;
+    letter-spacing: 3px;
+  }
+
+  .image-container {
+    margin: 10px;
+  }
+}
